--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/WrapPanel/WrapPanelPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/WrapPanel/WrapPanelPage.xaml
@@ -2,46 +2,63 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-      xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:wrapPanel="using:Microsoft.Toolkit.Uwp.UI.Controls.WrapPanel"
       mc:Ignorable="d">
 
+    <Page.Resources>
+        <DataTemplate x:Key="PhotoTemplate">
+            <Grid Width="{Binding Width}"
+                  Height="{Binding Height}"
+                  Margin="3"
+                  PointerPressed="Grid_PointerPressed">
+                <Image HorizontalAlignment="Center"
+                       Stretch="UniformToFill">
+                    <Image.Source>
+                        <BitmapImage DecodePixelHeight="200"
+                                     UriSource="{Binding Thumbnail}" />
+                    </Image.Source>
+                </Image>
+                <Border VerticalAlignment="Bottom">
+                    <Border.Background>
+                        <LinearGradientBrush EndPoint="0,1">
+                            <GradientStop Offset="0" Color="Transparent" />
+                            <GradientStop Offset="1" Color="#33000000" />
+                        </LinearGradientBrush>
+                    </Border.Background>
+                    <TextBlock Margin="5,20,5,5"
+                               VerticalAlignment="Bottom"
+                               Text="{Binding Category}" />
+                </Border>
+            </Grid>
+        </DataTemplate>
+    </Page.Resources>
+
     <Grid Padding="48"
           Background="{StaticResource Brush-Grey-05}">
         <Grid.RowDefinitions>
-            <RowDefinition />
+            <RowDefinition Height="50" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <Grid>
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <Button Name="HorizontalButton"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Click="HorizontalButton_Click"
-                    Content="Add Horizontal Control" />
-            <wrapPanel:WrapPanel Name="HorizontalWrapPanel"
-                                 Grid.Row="1"
-                                 Margin="2" />
-        </Grid>
+        <Button Name="AddButton"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Click="AddButton_Click"
+                Content="Add Control" />
+        <Button Name="SwitchButton"
+                Grid.Row="0"
+                Click="SwitchButton_Click"
+                Content="Switch Orientation" />
 
-        <Grid Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="50" />
-                <RowDefinition />
-            </Grid.RowDefinitions>
-            <Button Name="VerticalButton"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Click="VerticalButton_Click"
-                    Content="Add Vertical Control" />
-            <wrapPanel:WrapPanel Name="VerticalWrapPanel"
-                                 Grid.Row="1"
-                                 Margin="2"
-                                 Orientation="Vertical" />
-        </Grid>
+        <ItemsControl Name="WrapPanelContainer"
+                      Grid.Row="1"
+                      Margin="2"
+                      ItemTemplate="{StaticResource PhotoTemplate}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <wrapPanel:WrapPanel Background="LightGray" />
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+        </ItemsControl>
     </Grid>
 </Page>
