Fixing up the public interface of the Markdown control and fixing all of the style errors in the main code.

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MarkdownTextBlock/MarkdownTextBlockPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MarkdownTextBlock/MarkdownTextBlockPage.xaml
@@ -21,7 +21,7 @@
 
         <TextBlock Grid.Row="2" Text="Markdown Text" Margin="12,12,12,0" FontSize="18"/>
         <ScrollViewer Grid.Row="3" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Margin="12" BorderBrush="{ThemeResource AppBarBorderThemeBrush}" BorderThickness="2">
-            <controls:MarkdownTextBlock x:Name="ui_markdownText" Margin="6" Foreground="Black" OnMarkdownLinkTapped="MarkdownText_OnMarkdownLinkTapped"/>
+            <controls:MarkdownTextBlock x:Name="ui_markdownText" Margin="6" Foreground="Black" OnLinkClicked="MarkdownText_OnLinkClicked"/>
         </ScrollViewer>        
     </Grid>
 </Page>
