--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/OneDrive Service/OneDrivePage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/OneDrive Service/OneDrivePage.xaml
@@ -395,7 +395,8 @@
                                     Grid.Row="1">
                             <TextBox Header="Client Id:" 
                                      x:Name="ClientId" 
-                                     Margin="0,0,0,12"/>
+                                     Margin="0,0,0,12"
+                                     Text="abf8249f-eb8b-4109-a252-16859e278880"/>
                             <Button Content="Sign in" 
                                     x:Name="ConnectButton" 
                                     Click="ConnectButton_Click" 
