--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MarkdownTextBlock/MarkdownTextBlockPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MarkdownTextBlock/MarkdownTextBlockPage.xaml
@@ -2,13 +2,12 @@
     x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.MarkdownTextBlockPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Microsoft.Toolkit.Uwp.SampleApp.SamplePages.MarkdownTextBlock"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">        
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
@@ -16,12 +15,33 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Text="Regular Text" Margin="12,12,12,0" FontSize="18"/>        
-        <TextBox x:Name="ui_unformattedText" Grid.Row="1" Margin="12" AcceptsReturn="True" TextWrapping="Wrap" />
+        <TextBlock Grid.Row="0" 
+                   Text="Regular Text" 
+                   Margin="12,12,12,0" 
+                   FontSize="18"/>
+        <TextBox Grid.Row="1" 
+                 Margin="12" 
+                 ScrollViewer.VerticalScrollBarVisibility="Auto" 
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
+                 x:Name="UiUnformattedText" 
+                 AcceptsReturn="True" 
+                 TextWrapping="Wrap"/>
 
-        <TextBlock Grid.Row="2" Text="Markdown Text" Margin="12,12,12,0" FontSize="18"/>
-        <ScrollViewer Grid.Row="3" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Disabled" Margin="12" BorderBrush="{ThemeResource AppBarBorderThemeBrush}" BorderThickness="2">
-            <controls:MarkdownTextBlock x:Name="ui_markdownText" Margin="6" Foreground="Black" OnLinkClicked="MarkdownText_OnLinkClicked"/>
-        </ScrollViewer>        
+        <TextBlock Grid.Row="2" 
+                   Text="Markdown Text" 
+                   Margin="12,12,12,0" 
+                   FontSize="18"/>
+        <ScrollViewer Grid.Row="3" 
+                      VerticalScrollBarVisibility="Visible" 
+                      HorizontalScrollBarVisibility="Disabled" 
+                      Margin="12" 
+                      BorderBrush="{ThemeResource AppBarBorderThemeBrush}" 
+                      BorderThickness="2">
+            <controls:MarkdownTextBlock x:Name="UiMarkdownText" 
+                                        Text="{Binding ElementName=UiUnformattedText, Path=Text}" 
+                                        Margin="6" 
+                                        Foreground="Black" 
+                                        OnLinkClicked="MarkdownText_OnLinkClicked"/>
+        </ScrollViewer>
     </Grid>
 </Page>
