changes requested Removed DropShadowPanel.Members.cs file Moved all methods to DropShadowPanel.cs Renamed Loaded and SizeChanged event handlers to OnLoaded and OnSizeChanged Remove template binding of content in xaml null checks for _shadowVisual and _dropShadow

--- a/Microsoft.Toolkit.Uwp.UI.Controls/DropShadowPanel/DropShadowPanel.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/DropShadowPanel/DropShadowPanel.xaml
@@ -10,8 +10,7 @@
                           BorderBrush="{TemplateBinding BorderBrush}"
                           BorderThickness="{TemplateBinding BorderThickness}">
                         <Border x:Name="ShadowElement" />
-                        <ContentPresenter x:Name="CastingElement"
-                                          Content="{TemplateBinding Content}" />
+                        <ContentPresenter />
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
