--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxRegexEx/TextBoxRegexExPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxRegexEx/TextBoxRegexExPage.xaml
@@ -8,9 +8,7 @@
       mc:Ignorable="d">
 
     <Page.Resources>
-
         <common:BoolStringConverter x:Key="StringFormatConverter" />
-
         <Style x:Key="TextBoxRegexExStyle"
                TargetType="TextBox">
             <Setter Property="VerticalAlignment" Value="Top" />
@@ -30,6 +28,7 @@
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <StackPanel Margin="10,0,10,0">
@@ -39,8 +38,11 @@
                          HeaderTemplate="{StaticResource HeaderTemplate}"
                          Style="{StaticResource TextBoxRegexExStyle}"
                          Text="" />
-                <TextBlock>Validation Result:</TextBlock>
-                <TextBlock Text="{Binding (controls:TextBoxRegexEx.IsValid), ElementName=PhoneNumberValidator, Converter={StaticResource StringFormatConverter}}" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Validation Result: " />
+                    <TextBlock Text="{Binding (controls:TextBoxRegexEx.IsValid), ElementName=PhoneNumberValidator, Converter={StaticResource StringFormatConverter}}" />
+                </StackPanel>
+
             </StackPanel>
 
             <StackPanel Grid.Row="1"
@@ -51,9 +53,41 @@
                          Header="Text box with Regex extension for phone number, validation occurs on textbox lose focus with ValidationMode=Force"
                          HeaderTemplate="{StaticResource HeaderTemplate}"
                          Style="{StaticResource TextBoxRegexExStyle}"
+                         Text="+61616161611" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Validation Result: " />
+                    <TextBlock Text="{Binding (controls:TextBoxRegexEx.IsValid), ElementName=PhoneNumberValidatorForce, Converter={StaticResource StringFormatConverter}}" />
+                </StackPanel>
+            </StackPanel>
+
+            <StackPanel Grid.Row="2"
+                        Margin="10,0,10,0">
+                <TextBox Name="EmailValidatorForce"
+                         controls:TextBoxRegexEx.Regex="^([\w\.\-]+)@([\w\-]+)((\.(\w){2,3})+)$"
+                         controls:TextBoxRegexEx.ValidationMode="Forced"
+                         Header="Text box with Regex extension for email, validation occurs on textbox lose focus with ValidationMode=Force"
+                         HeaderTemplate="{StaticResource HeaderTemplate}"
+                         Style="{StaticResource TextBoxRegexExStyle}"
                          Text="" />
-                <TextBlock>Validation Result:</TextBlock>
-                <TextBlock Text="{Binding (controls:TextBoxRegexEx.IsValid), ElementName=PhoneNumberValidatorForce, Converter={StaticResource StringFormatConverter}}" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Validation Result: " />
+                    <TextBlock Text="{Binding (controls:TextBoxRegexEx.IsValid), ElementName=EmailValidatorForce, Converter={StaticResource StringFormatConverter}}" />
+                </StackPanel>
+            </StackPanel>
+
+            <StackPanel Grid.Row="3"
+                        Margin="10,0,10,0">
+                <TextBox Name="DecimalValidatorForce"
+                         controls:TextBoxRegexEx.Regex="^[0-9]([.,][0-9]{1,3})?$"
+                         controls:TextBoxRegexEx.ValidationMode="Forced"
+                         Header="Text box with Regex extension for decimal number, validation occurs on textbox lose focus with ValidationMode=Force"
+                         HeaderTemplate="{StaticResource HeaderTemplate}"
+                         Style="{StaticResource TextBoxRegexExStyle}"
+                         Text="" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock Text="Validation Result: " />
+                    <TextBlock Text="{Binding (controls:TextBoxRegexEx.IsValid), ElementName=DecimalValidatorForce, Converter={StaticResource StringFormatConverter}}" />
+                </StackPanel>
             </StackPanel>
 
         </Grid>
