updating sample page regex ext

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxRegexEx/TextBoxRegexExPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/TextBoxRegexEx/TextBoxRegexExPage.xaml
@@ -33,7 +33,7 @@
 
             <StackPanel Margin="10,0,10,0">
                 <TextBox Name="PhoneNumberValidator"
-                         controls:TextBoxRegexEx.Regex="\(?\d{3}\)?-? *\d{3}-? *-?\d{4}"
+                         controls:TextBoxRegexEx.Regex="^\s*\+?\s*([0-9][\s-]*){9,}$"
                          Header="Text box with Regex extension for phone number, validation occurs on textbox lose focus"
                          HeaderTemplate="{StaticResource HeaderTemplate}"
                          Style="{StaticResource TextBoxRegexExStyle}"
@@ -48,7 +48,7 @@
             <StackPanel Grid.Row="1"
                         Margin="10,0,10,0">
                 <TextBox Name="PhoneNumberValidatorForce"
-                         controls:TextBoxRegexEx.Regex="\(?\d{3}\)?-? *\d{3}-? *-?\d{4}"
+                         controls:TextBoxRegexEx.Regex="^\s*\+?\s*([0-9][\s-]*){9,}$"
                          controls:TextBoxRegexEx.ValidationMode="Forced"
                          Header="Text box with Regex extension for phone number, validation occurs on textbox lose focus with ValidationMode=Force"
                          HeaderTemplate="{StaticResource HeaderTemplate}"
@@ -78,9 +78,9 @@
             <StackPanel Grid.Row="3"
                         Margin="10,0,10,0">
                 <TextBox Name="DecimalValidatorForce"
-                         controls:TextBoxRegexEx.Regex="^[0-9]([.,][0-9]{1,3})?$"
+                         controls:TextBoxRegexEx.Regex="^[0-9]{1,8}([.,][0-9]{1,8})?$"
                          controls:TextBoxRegexEx.ValidationMode="Forced"
-                         Header="Text box with Regex extension for decimal number, validation occurs on textbox lose focus with ValidationMode=Force"
+                         Header="Text box with Regex extension for decimal number, validation occurs on textbox lose focus with ValidationMode=Force (333,111 or 333.111)"
                          HeaderTemplate="{StaticResource HeaderTemplate}"
                          Style="{StaticResource TextBoxRegexExStyle}"
                          Text="" />
