Fixed warnings Better UI for badges on mobile

--- a/Microsoft.Toolkit.Uwp.SampleApp/Pages/SamplePicker.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/Pages/SamplePicker.xaml
@@ -62,25 +62,31 @@
         </DataTemplate>
         <DataTemplate x:Key="SmallSampleTemplate"
                       x:DataType="sampleApp:Sample">
-            <Grid MinHeight="80"
+            <Grid Height="80"
                   MaxHeight="110"
                   Margin="6">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
                 <Border Grid.Column="0"
                         Margin="0,0,6,0"
                         VerticalAlignment="Center"
                         BorderBrush="{StaticResource Brush-Grey-04}"
                         BorderThickness="1">
                     <Image Width="80"
-                           Height="80"
                            Source="{Binding Icon}" />
                 </Border>
-                <Grid Grid.Column="1">
+                <Image Grid.Row="1" Margin="0 5 0 0"
+                           VerticalAlignment="Center" HorizontalAlignment="Left"
+                           Source="{Binding BadgeUpdateVersionRequired}"
+                           Width="80" Stretch="Uniform" />
+                <Grid Grid.Column="1" Grid.RowSpan="2">
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
@@ -97,10 +103,6 @@
                                Foreground="{StaticResource Brush-Grey-01}"
                                Text="{x:Bind About}"
                                TextWrapping="Wrap" />
-                    <Image Grid.Row="2" Margin="0 5 0 0"
-                           VerticalAlignment="Center" HorizontalAlignment="Left"
-                           Source="{Binding BadgeUpdateVersionRequired}"
-                           Width="80" Stretch="Uniform" />
                 </Grid>
             </Grid>
         </DataTemplate>
