--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MarkdownTextBlock/MarkdownTextBlockPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/MarkdownTextBlock/MarkdownTextBlockPage.xaml
@@ -1,47 +1,46 @@
-﻿<Page
-    x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.MarkdownTextBlockPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
-    mc:Ignorable="d">
+﻿<Page x:Class="Microsoft.Toolkit.Uwp.SampleApp.SamplePages.MarkdownTextBlockPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" 
-                   Text="Regular Text" 
-                   Margin="12,12,12,0" 
-                   FontSize="18"/>
-        <TextBox Grid.Row="1" 
-                 Margin="12" 
-                 ScrollViewer.VerticalScrollBarVisibility="Auto" 
-                 ScrollViewer.HorizontalScrollBarVisibility="Disabled" 
-                 x:Name="UiUnformattedText" 
-                 AcceptsReturn="True" 
-                 TextWrapping="Wrap"/>
+        <TextBlock Grid.Row="0"
+                   Margin="12,12,12,0"
+                   FontSize="18"
+                   Text="Regular Text" />
+        <TextBox x:Name="UiUnformattedText"
+                 Grid.Row="1"
+                 Margin="12"
+                 AcceptsReturn="True"
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                 ScrollViewer.VerticalScrollBarVisibility="Auto"
+                 TextWrapping="Wrap" />
 
-        <TextBlock Grid.Row="2" 
-                   Text="Markdown Text" 
-                   Margin="12,12,12,0" 
-                   FontSize="18"/>
-        <ScrollViewer Grid.Row="3" 
-                      VerticalScrollBarVisibility="Visible" 
-                      HorizontalScrollBarVisibility="Disabled" 
-                      Margin="12" 
-                      BorderBrush="{ThemeResource AppBarBorderThemeBrush}" 
-                      BorderThickness="2">
-            <controls:MarkdownTextBlock x:Name="UiMarkdownText" 
-                                        Text="{Binding ElementName=UiUnformattedText, Path=Text}" 
-                                        Margin="6" 
-                                        Foreground="Black" 
-                                        OnLinkClicked="MarkdownText_OnLinkClicked"/>
+        <TextBlock Grid.Row="2"
+                   Margin="12,12,12,0"
+                   FontSize="18"
+                   Text="Markdown Text" />
+        <ScrollViewer Grid.Row="3"
+                      Margin="12"
+                      BorderBrush="{ThemeResource AppBarBorderThemeBrush}"
+                      BorderThickness="2"
+                      HorizontalScrollBarVisibility="Disabled"
+                      VerticalScrollBarVisibility="Visible">
+            <controls:MarkdownTextBlock x:Name="UiMarkdownText"
+                                        Margin="6"
+                                        Foreground="Black"
+                                        OnLinkClicked="MarkdownText_OnLinkClicked"
+                                        Text="{Binding ElementName=UiUnformattedText, Path=Text}" />
         </ScrollViewer>
     </Grid>
 </Page>
